freefare/assets/libfreefare/freefare.h

enum freefare_tag_type {
    FELICA,
    MIFARE_MINI,
    MIFARE_CLASSIC_1K,
    MIFARE_CLASSIC_4K,
    MIFARE_DESFIRE,
//    MIFARE_PLUS_S2K,
//    MIFARE_PLUS_S4K,
//    MIFARE_PLUS_X2K,
//    MIFARE_PLUS_X4K,
    MIFARE_ULTRALIGHT,
    MIFARE_ULTRALIGHT_C,
    NTAG_21x,
};
struct freefare_tag;
typedef struct freefare_tag *FreefareTag;
FreefareTag	*freefare_get_tags(nfc_device *device);
FreefareTag	 freefare_tag_new(nfc_device *device, nfc_target target);
enum freefare_tag_type freefare_get_tag_type(FreefareTag tag);
const char	*freefare_get_tag_friendly_name(FreefareTag tag);
char		*freefare_get_tag_uid(FreefareTag tag);
void		 freefare_free_tag(FreefareTag tag);
void		 freefare_free_tags(FreefareTag *tags);
bool		 freefare_selected_tag_is_present(nfc_device *device);
void		 freefare_set_tag_timeout(FreefareTag tag, int timeout);
const char	*freefare_version(void);
const char	*freefare_strerror(FreefareTag tag);
int		 freefare_strerror_r(FreefareTag tag, char *buffer, size_t len);
void		 freefare_perror(FreefareTag tag, const char *string);