freefare/assets/nfc/nfc-emulation.h

struct nfc_emulator;
struct nfc_emulation_state_machine;
/**
 * @struct nfc_emulator
 * @brief NFC emulator structure
 */
struct nfc_emulator {
  nfc_target *target;
  struct nfc_emulation_state_machine *state_machine;
  void *user_data;
};
/**
 * @struct nfc_emulation_state_machine
 * @brief  NFC emulation state machine structure
 */
struct nfc_emulation_state_machine {
  int (*io)(struct nfc_emulator *emulator, const uint8_t *data_in, const size_t data_in_len, uint8_t *data_out, const size_t data_out_len);
  void *data;
};
NFC_EXPORT int    nfc_emulate_target(nfc_device *pnd, struct nfc_emulator *emulator, const int timeout);