freefare/lib/src/ffi/libfreefare.g.dart


  late final _nfc_device_set_property_boolPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<nfc_device>, ffi.Int32,
              ffi.Bool)>>('nfc_device_set_property_bool');
  late final _nfc_device_set_property_bool = _nfc_device_set_property_boolPtr
      .asFunction<int Function(ffi.Pointer<nfc_device>, int, bool)>();

  void nfc_free(
    ffi.Pointer<ffi.Void> p,
  ) {
    return _nfc_free(
      p,
    );
  }

  late final _nfc_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'nfc_free');
  late final _nfc_free =
      _nfc_freePtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> nfc_version() {
    return _nfc_version();
  }

  late final _nfc_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'nfc_version');
  late final _nfc_version =
      _nfc_versionPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  int nfc_device_get_information_about(
    ffi.Pointer<nfc_device> pnd,
    ffi.Pointer<ffi.Pointer<ffi.Char>> buf,
  ) {
    return _nfc_device_get_information_about(
      pnd,
      buf,
    );
  }

  late final _nfc_device_get_information_aboutPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(ffi.Pointer<nfc_device>,
                  ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
      'nfc_device_get_information_about');
  late final _nfc_device_get_information_about =
      _nfc_device_get_information_aboutPtr.asFunction<
          int Function(
              ffi.Pointer<nfc_device>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  ffi.Pointer<ffi.Pointer<freefare_tag>> freefare_get_tags(
    ffi.Pointer<nfc_device> device,
  ) {
    return _freefare_get_tags(
      device,
    );
  }

  late final _freefare_get_tagsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Pointer<freefare_tag>> Function(
              ffi.Pointer<nfc_device>)>>('freefare_get_tags');
  late final _freefare_get_tags = _freefare_get_tagsPtr.asFunction<
      ffi.Pointer<ffi.Pointer<freefare_tag>> Function(
          ffi.Pointer<nfc_device>)>();

  ffi.Pointer<freefare_tag> freefare_tag_new(
    ffi.Pointer<nfc_device> device,
    nfc_target target,
  ) {
    return _freefare_tag_new(
      device,
      target,
    );
  }

  late final _freefare_tag_newPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<freefare_tag> Function(
              ffi.Pointer<nfc_device>, nfc_target)>>('freefare_tag_new');
  late final _freefare_tag_new = _freefare_tag_newPtr.asFunction<
      ffi.Pointer<freefare_tag> Function(
          ffi.Pointer<nfc_device>, nfc_target)>();

  int freefare_get_tag_type(
    ffi.Pointer<freefare_tag> tag,
  ) {
    return _freefare_get_tag_type(
      tag,
    );
  }

  late final _freefare_get_tag_typePtr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<freefare_tag>)>>(
      'freefare_get_tag_type');
  late final _freefare_get_tag_type = _freefare_get_tag_typePtr
      .asFunction<int Function(ffi.Pointer<freefare_tag>)>();

  ffi.Pointer<ffi.Char> freefare_get_tag_friendly_name(
    ffi.Pointer<freefare_tag> tag,
  ) {
    return _freefare_get_tag_friendly_name(
      tag,
    );
  }

  late final _freefare_get_tag_friendly_namePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<freefare_tag>)>>('freefare_get_tag_friendly_name');
  late final _freefare_get_tag_friendly_name =
      _freefare_get_tag_friendly_namePtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<freefare_tag>)>();

  ffi.Pointer<ffi.Char> freefare_get_tag_uid(
    ffi.Pointer<freefare_tag> tag,
  ) {
    return _freefare_get_tag_uid(
      tag,
    );
  }

  late final _freefare_get_tag_uidPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<freefare_tag>)>>('freefare_get_tag_uid');
  late final _freefare_get_tag_uid = _freefare_get_tag_uidPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<freefare_tag>)>();

  void freefare_free_tag(
    ffi.Pointer<freefare_tag> tag,
  ) {
    return _freefare_free_tag(
      tag,
    );
  }

  late final _freefare_free_tagPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<freefare_tag>)>>(
          'freefare_free_tag');
  late final _freefare_free_tag = _freefare_free_tagPtr
      .asFunction<void Function(ffi.Pointer<freefare_tag>)>();

  void freefare_free_tags(
    ffi.Pointer<ffi.Pointer<freefare_tag>> tags,
  ) {
    return _freefare_free_tags(
      tags,
    );
  }

  late final _freefare_free_tagsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Pointer<freefare_tag>>)>>('freefare_free_tags');
  late final _freefare_free_tags = _freefare_free_tagsPtr
      .asFunction<void Function(ffi.Pointer<ffi.Pointer<freefare_tag>>)>();

  bool freefare_selected_tag_is_present(
    ffi.Pointer<nfc_device> device,
  ) {
    return _freefare_selected_tag_is_present(
      device,
    );
  }

  late final _freefare_selected_tag_is_presentPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<nfc_device>)>>(
          'freefare_selected_tag_is_present');
  late final _freefare_selected_tag_is_present =
      _freefare_selected_tag_is_presentPtr
          .asFunction<bool Function(ffi.Pointer<nfc_device>)>();

  void freefare_set_tag_timeout(
    ffi.Pointer<freefare_tag> tag,
    int timeout,
  ) {
    return _freefare_set_tag_timeout(
      tag,
      timeout,
    );
  }

  late final _freefare_set_tag_timeoutPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<freefare_tag>, ffi.Int)>>('freefare_set_tag_timeout');
  late final _freefare_set_tag_timeout = _freefare_set_tag_timeoutPtr
      .asFunction<void Function(ffi.Pointer<freefare_tag>, int)>();

  ffi.Pointer<ffi.Char> freefare_version() {
    return _freefare_version();
  }

  late final _freefare_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'freefare_version');
  late final _freefare_version =
      _freefare_versionPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  ffi.Pointer<ffi.Char> freefare_strerror(
    ffi.Pointer<freefare_tag> tag,
  ) {
    return _freefare_strerror(
      tag,
    );
  }

  late final _freefare_strerrorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<freefare_tag>)>>('freefare_strerror');
  late final _freefare_strerror = _freefare_strerrorPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<freefare_tag>)>();

  int freefare_strerror_r(
    ffi.Pointer<freefare_tag> tag,
    ffi.Pointer<ffi.Char> buffer,
    int len,
  ) {
    return _freefare_strerror_r(
      tag,
      buffer,
      len,
    );
  }

  late final _freefare_strerror_rPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<freefare_tag>, ffi.Pointer<ffi.Char>,
              ffi.Size)>>('freefare_strerror_r');
  late final _freefare_strerror_r = _freefare_strerror_rPtr.asFunction<
      int Function(ffi.Pointer<freefare_tag>, ffi.Pointer<ffi.Char>, int)>();

  void freefare_perror(
    ffi.Pointer<freefare_tag> tag,
    ffi.Pointer<ffi.Char> string,
  ) {
    return _freefare_perror(
      tag,
      string,
    );
  }

  late final _freefare_perrorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<freefare_tag>,
              ffi.Pointer<ffi.Char>)>>('freefare_perror');
  late final _freefare_perror = _freefare_perrorPtr.asFunction<
      void Function(ffi.Pointer<freefare_tag>, ffi.Pointer<ffi.Char>)>();

  int nfc_emulate_target(
    ffi.Pointer<nfc_device> pnd,
    ffi.Pointer<nfc_emulator> emulator,
    int timeout,
  ) {
    return _nfc_emulate_target(
      pnd,
      emulator,
      timeout,
    );
  }

  late final _nfc_emulate_targetPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<nfc_device>, ffi.Pointer<nfc_emulator>,
              ffi.Int)>>('nfc_emulate_target');
  late final _nfc_emulate_target = _nfc_emulate_targetPtr.asFunction<
      int Function(ffi.Pointer<nfc_device>, ffi.Pointer<nfc_emulator>, int)>();
}

final class freefare_tag extends ffi.Struct {
  external ffi.Pointer<ffi.Int> device;

  @ffi.Int()
  external int info;

  @ffi.Int()
  external int type;

  @ffi.Int()
  external int active;

  @ffi.Int()
  external int timeout;

  external ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Int tag)>>
      free_tag;
}

final class nfc_context extends ffi.Opaque {}

final class nfc_device extends ffi.Opaque {}

final class nfc_driver extends ffi.Opaque {}

/// @struct nfc_dep_info
/// @brief NFC target information in D.E.P. (Data Exchange Protocol) see ISO/IEC 18092 (NFCIP-1)
@ffi.Packed(1)
final class nfc_dep_info extends ffi.Struct {
  /// NFCID3
  @ffi.Array.multi([10])
  external ffi.Array<ffi.Uint8> abtNFCID3;

  /// DID
  @ffi.Uint8()
  external int btDID;

  /// Supported send-bit rate
  @ffi.Uint8()
  external int btBS;

  /// Supported receive-bit rate
  @ffi.Uint8()
  external int btBR;

  /// Timeout value
  @ffi.Uint8()
  external int btTO;

  /// PP Parameters
  @ffi.Uint8()
  external int btPP;

  /// General Bytes
  @ffi.Array.multi([48])
  external ffi.Array<ffi.Uint8> abtGB;

  @ffi.Size()
  external int szGB;

  /// DEP mode
  @ffi.Int32()
  external int ndm;
}

/// @enum nfc_dep_mode
/// @brief NFC D.E.P. (Data Exchange Protocol) active/passive mode
abstract class nfc_dep_mode {
  static const int NDM_UNDEFINED = 0;
  static const int NDM_PASSIVE = 1;
  static const int NDM_ACTIVE = 2;
}

/// @struct nfc_iso14443a_info
/// @brief NFC ISO14443A tag (MIFARE) information
@ffi.Packed(1)
final class nfc_iso14443a_info extends ffi.Struct {
  @ffi.Array.multi([2])
  external ffi.Array<ffi.Uint8> abtAtqa;

  @ffi.Uint8()
  external int btSak;

  @ffi.Size()
  external int szUidLen;

  @ffi.Array.multi([10])
  external ffi.Array<ffi.Uint8> abtUid;

  @ffi.Size()
  external int szAtsLen;

  @ffi.Array.multi([254])
  external ffi.Array<ffi.Uint8> abtAts;
}

/// @struct nfc_felica_info
/// @brief NFC FeLiCa tag information
@ffi.Packed(1)
final class nfc_felica_info extends ffi.Struct {
  @ffi.Size()
  external int szLen;

  @ffi.Uint8()
  external int btResCode;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Uint8> abtId;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Uint8> abtPad;

  @ffi.Array.multi([2])
  external ffi.Array<ffi.Uint8> abtSysCode;
}

/// @struct nfc_iso14443b_info
/// @brief NFC ISO14443B tag information
final class nfc_iso14443b_info extends ffi.Struct {
  /// abtPupi store PUPI contained in ATQB (Answer To reQuest of type B) (see ISO14443-3)
  @ffi.Array.multi([4])
  external ffi.Array<ffi.Uint8> abtPupi;

  /// abtApplicationData store Application Data contained in ATQB (see ISO14443-3)
  @ffi.Array.multi([4])
  external ffi.Array<ffi.Uint8> abtApplicationData;

  /// abtProtocolInfo store Protocol Info contained in ATQB (see ISO14443-3)
  @ffi.Array.multi([3])
  external ffi.Array<ffi.Uint8> abtProtocolInfo;

  /// ui8CardIdentifier store CID (Card Identifier) attributted by PCD to the PICC
  @ffi.Uint8()
  external int ui8CardIdentifier;
}

/// @struct nfc_iso14443bi_info
/// @brief NFC ISO14443B' tag information
@ffi.Packed(1)
final class nfc_iso14443bi_info extends ffi.Struct {
  /// DIV: 4 LSBytes of tag serial number
  @ffi.Array.multi([4])
  external ffi.Array<ffi.Uint8> abtDIV;

  /// Software version & type of REPGEN
  @ffi.Uint8()
  external int btVerLog;

  /// Config Byte, present if long REPGEN
  @ffi.Uint8()
  external int btConfig;

  /// ATR, if any
  @ffi.Size()
  external int szAtrLen;

  @ffi.Array.multi([33])
  external ffi.Array<ffi.Uint8> abtAtr;
}
